--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint .",
-    "start": "node server.js"
+    "start": "node server.js",
+    "precommit": "npm run lint"
   },
   "dependencies": {
     "babel-preset-es2017": "^1.6.1",
@@ -20,6 +21,8 @@
     "babel-eslint": "^6.1.2",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.12.0"
+    "eslint-plugin-import": "^1.12.0",
+    "husky": "^0.11.9",
+    "mocha": "^3.2.0"
   }
 }
