--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-mocha": "^4.7.0",
     "husky": "^0.11.9",
     "mocha": "^3.2.0"
   }
