Moving config to /infra

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.2",
     "on-headers": "^1.0.1",
     "prepper": "^0.2.0",
+    "require-all": "^2.0.0",
     "systemic": "^0.6.0",
     "systemic-express": "^1.1.0",
     "systemic-service-runner": "^0.1.2"
