--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "id-length": 0,
     "import/prefer-default-export": 0,
     "max-len": 0,
+    "import/default": 0,
     "newline-per-chained-call": 0,
     "no-console": 0,
     "no-param-reassign": [2, { "props": false }],
