--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "babel-preset-es2017": "^1.6.1",
     "babel-register": "^6.11.6",
+    "bunyan": "^1.8.5",
+    "chalk": "^1.1.3",
     "confabulous": "^1.0.0",
+    "hogan.js": "^3.0.2",
     "lodash": "^4.17.2",
     "on-headers": "^1.0.1",
+    "optional": "^0.1.3",
     "prepper": "^0.2.0",
     "require-all": "^2.0.0",
     "systemic": "^0.6.0",
